<resources>
    <string name="app_name">cafepedro</string>
    <string name="inicio_titulo">CafePedro</string>
    <string name="inicio_descrip">Gran café hecho simple. Empieza tus mañanas con los mejores cafés del mundo. Pruebe nuestros cafés artesanales curados por expertos de nuestros mejores tostadores entregados directamente en su puerta, a su horario..</string>
    <string name="btn_inicio">Suscripcion</string>
    <string name="col_titulo">Nuestra Coleccion</string>
    <string name="col_1">Gran Espresso</string>
    <string name="col_2">Planalto</string>
    <string name="col_3">Danche</string>
    <string name="btn_col">Suscribirse</string>

</resources>